# aura-router

./: .env.example  README.md
crates/auth/src/: extractors.rs  lib.rs  public_rate_limit.rs  validate.rs
crates/core/src/: errors.rs
crates/domain/proxy/src/: anthropic_compat.rs  billing.rs  google_compat.rs  image_gen.rs  lib.rs  providers.rs  s3.rs  seedance.rs  stats.rs  storage.rs  stream.rs  tripo.rs  veo.rs  video_types.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  router.rs  state.rs
crates/server/src/handlers/: generate_3d.rs  generate_video.rs  image_gen.rs  mod.rs  proxy.rs  upload.rs
docs/: api.md
